; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_hevc.c_skip_scaling_list_data.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_hevc.c_skip_scaling_list_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @skip_scaling_list_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skip_scaling_list_data(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %53, %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 4
  br i1 %9, label %10, label %56

10:                                               ; preds = %7
  store i32 0, i32* %4, align 4
  br label %11

11:                                               ; preds = %49, %10
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %3, align 4
  %14 = icmp eq i32 %13, 3
  %15 = zext i1 %14 to i64
  %16 = select i1 %14, i32 2, i32 6
  %17 = icmp slt i32 %12, %16
  br i1 %17, label %18, label %52

18:                                               ; preds = %11
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @get_bits1(i32* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %18
  %23 = load i32*, i32** %2, align 8
  %24 = call i32 @get_ue_golomb_long(i32* %23)
  br label %48

25:                                               ; preds = %18
  %26 = load i32, i32* %3, align 4
  %27 = shl i32 %26, 1
  %28 = add nsw i32 4, %27
  %29 = shl i32 1, %28
  %30 = call i32 @FFMIN(i32 64, i32 %29)
  store i32 %30, i32* %6, align 4
  %31 = load i32, i32* %3, align 4
  %32 = icmp sgt i32 %31, 1
  br i1 %32, label %33, label %36

33:                                               ; preds = %25
  %34 = load i32*, i32** %2, align 8
  %35 = call i32 @get_se_golomb_long(i32* %34)
  br label %36

36:                                               ; preds = %33, %25
  store i32 0, i32* %5, align 4
  br label %37

37:                                               ; preds = %44, %36
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* %6, align 4
  %40 = icmp slt i32 %38, %39
  br i1 %40, label %41, label %47

41:                                               ; preds = %37
  %42 = load i32*, i32** %2, align 8
  %43 = call i32 @get_se_golomb_long(i32* %42)
  br label %44

44:                                               ; preds = %41
  %45 = load i32, i32* %5, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %5, align 4
  br label %37

47:                                               ; preds = %37
  br label %48

48:                                               ; preds = %47, %22
  br label %49

49:                                               ; preds = %48
  %50 = load i32, i32* %4, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %4, align 4
  br label %11

52:                                               ; preds = %11
  br label %53

53:                                               ; preds = %52
  %54 = load i32, i32* %3, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %3, align 4
  br label %7

56:                                               ; preds = %7
  ret void
}

declare dso_local i32 @get_bits1(i32*) #1

declare dso_local i32 @get_ue_golomb_long(i32*) #1

declare dso_local i32 @FFMIN(i32, i32) #1

declare dso_local i32 @get_se_golomb_long(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
